<resources>
    <string name="app_name">Geek Guide</string>
    <string name="log_in">Log In</string>
    <string name="remember_me">Remember me  </string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="forget_me">Forget Me!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
